--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,19 +20,20 @@ build:
   stage: build
   script:
     - mvn $MAVEN_CLI_OPTS compile
+    - cat ~/.m2/settings.xml
 
-test:
+.test:
   stage: test
   script:
     - mvn $MAVEN_CLI_OPTS test
 
-run:
+.run:
   stage: run
   script:
     - mvn $MAVEN_CLI_OPTS package
     - mvn $MAVEN_CLI_OPTS exec:java -Dexec.mainClass="com.example.app.App"
 
-deploy:
+.deploy:
   stage: deploy
   script:
     - mvn $MAVEN_CLI_OPTS deploy
