--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 variables:
   #MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
   MAVEN_CLI_OPTS: "--batch-mode"
-  MAVEN_OPTS: "-Dmaven.repo.local=~/.m2/repository"
+  #MAVEN_OPTS: "-Dmaven.repo.local=~/.m2/repository"
 
 cache:
   paths:
@@ -19,8 +19,9 @@ cache:
 build:
   stage: build
   script:
-    - mvn $MAVEN_CLI_OPTS compile
     - cat ~/.m2/settings.xml
+    - ls -alh ~/.m2
+    #- mvn $MAVEN_CLI_OPTS compile
 
 .test:
   stage: test
