--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: ${CI_DOCKER_REGISTRY_UPLOAD_NAME}/irhawks/maven:default
+image: ${CI_DOCKER_REGISTRY_NAME}/irhawks/maven:default
 
 stages:
   - build
@@ -18,6 +18,7 @@ cache:
 
 build:
   stage: build
+  image: ${CI_DOCKER_REGISTRY_NAME}/irhawks/maven:default
   script:
     - whoami
     - ls -alh /root/
