--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,10 @@ variables:
   MAVEN_CLI_OPTS: "--batch-mode"
   #MAVEN_OPTS: "-Dmaven.repo.local=~/.m2/repository"
 
-cache:
-  paths:
-    - .m2/repository/
-    - target/
+  #cache:
+  #  paths:
+  #    - .m2/repository/
+  #    - target/
 
 build:
   stage: build
