--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,22 +21,22 @@ build:
   image: ${CI_DOCKER_REGISTRY_NAME}/irhawks/maven:default
   script:
     - whoami
-    - ls -alh /root/
-    - cat /root/.m2/settings.xml
-    #- mvn $MAVEN_CLI_OPTS compile
+    - ls -alh /user/share/maven/ref
+    #- cat /root/.m2/settings.xml
+    - mvn $MAVEN_CLI_OPTS compile
 
-.test:
+test:
   stage: test
   script:
     - mvn $MAVEN_CLI_OPTS test
 
-.run:
+run:
   stage: run
   script:
     - mvn $MAVEN_CLI_OPTS package
     - mvn $MAVEN_CLI_OPTS exec:java -Dexec.mainClass="com.example.app.App"
 
-.deploy:
+deploy:
   stage: deploy
   script:
     - mvn $MAVEN_CLI_OPTS deploy
