--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
   - deploy
 
 variables:
-  #MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
+  MAVEN_CLI_OPTS: "-s /usr/share/maven/ref/settings.xml --batch-mode"
   MAVEN_CLI_OPTS: "--batch-mode"
   #MAVEN_OPTS: "-Dmaven.repo.local=~/.m2/repository"
 
@@ -22,7 +22,6 @@ build:
   script:
     - whoami
     - ls -alh /usr/share/maven/ref
-    #- cat /root/.m2/settings.xml
     - mvn $MAVEN_CLI_OPTS compile
 
 test:
