--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ build:
     - whoami
     - ls -alh /usr/share/maven/ref
     - mvn $MAVEN_CLI_OPTS compile
+    - echo $MAVEN_CLI_OPTS
 
 test:
   stage: test
