--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,10 +10,10 @@ variables:
   MAVEN_CLI_OPTS: "-s /usr/share/maven/ref/settings.xml --batch-mode"
   MAVEN_OPTS: "-Dmaven.repo.local=~/.m2/repository"
 
-  cache:
-    paths:
-      - ~/.m2/repository/
-      - target/
+cache:
+  paths:
+    - ~/.m2/repository/
+    - target/
 
 build:
   stage: build
@@ -21,8 +21,8 @@ build:
   script:
     - whoami
     - ls -alh /usr/share/maven/ref
-    - mvn $MAVEN_CLI_OPTS compile
-    - echo $MAVEN_CLI_OPTS
+    - "mvn $MAVEN_CLI_OPTS compile"
+    - "echo $MAVEN_CLI_OPTS"
 
 test:
   stage: test
